# UnlockMusic

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  UnlockMusic.sln
UnlockMusic/: MusicDecode.h  UnlockMusic.cpp  UnlockMusic.vcxproj  packages.config
UnlockMusic/decode/: mflac.cpp  qmc.cpp
srcs/: UnlockMusic.cpp  base64.h  decrypt.hpp  decrypt_handler.hpp  decrypt_ncm.hpp  decrypt_qmc.hpp  decrypt_qmcMask.hpp  decrypt_tm.hpp  detectAudioExt.hpp
